# dfx-top

./: Cargo.toml  LICENSE  README.md  extension.json
src/: dfx_commands.rs  dfx_project.rs  main.rs  parse_replica_dashboard.rs
src/app/: input.rs  layout.rs  mod.rs  state.rs
src/app/widgets/: canister.rs  identity.rs  mod.rs  replica.rs  style.rs
