[package]
name = "dfx-top"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi-to-tui = "3.1.0"
anyhow = "*"
chrono = "*"
clap = { version = "*", features = ["derive", "env"] }
crossterm = "*"
dirs = "5.0.1"
ratatui = "*"
reqwest = { version = "0.11.4", features = ["blocking", "json"] }
scraper = "*"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "*"

[dev-dependencies]
pretty_assertions = "1.4.0"
